# rml_package

./: Makefile  README.md  README.txt  RML Package.ipynb  shell.nix
.ipynb_checkpoints/: RML Package-checkpoint.ipynb
experiments/: .gitignore  Poetry Test.ipynb  Relationality Experiment.ipynb  enron.csv  experiment.py  graph.html  pyproject.toml  test.html
lib/py-relationality/: .gitignore  Makefile  README.md  pylintrc  pyproject.toml  setup  tooling
lib/py-relationality/src/relationality/: fields.py  util.py
lib/py-relationality/tests/relationality/: test_fields.py  test_util.py
new-venv/: pyvenv.cfg
new-venv/lib/: Tk.tiff  clang  cmake  itcl4.2.1  libLerc.dylib  libblas.3.dylib  libbz2.dylib  libc++.1.0.dylib  libcblas.3.dylib  libexpat.1.8.1.dylib  libexpat.dylib  libform.6.dylib  libformw.dylib  libfreetype.6.dylib  libfreetype.dylib  libgdbm.6.dylib  libgfortran.dylib  libgomp.dylib  libiomp5.dylib  liblapack.dylib  liblcms2.2.dylib  liblcms2.dylib  liblz4.1.9.3.dylib  libncurses.6.dylib  libncursesw.dylib  libomp.dylib  libopenblasp-r0.3.17.dylib  libopenjp2.7.dylib  libpanel.dylib  libpanelw.6.dylib  libpanelw.dylib  libpng.dylib  libpng16.16.dylib  libpypy3-c.dylib  libreadline.8.1.dylib  libsqlite3.0.dylib  libssl.1.1.dylib  libssl.dylib  libtcl8.6.dylib  libtiffxx.5.dylib  (+13 more)
tooling/: .gitignore  Makefile  setup
