[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
relationality = {path = "../lib/py-relationality"}

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
ipython = "^7.29.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
