[tool.poetry]
name = "relationality"
version = "0.1.0"
description = "Tools for studying relationality."
authors = []
readme = "README.md"

packages = [ { include = "relationality", from = "src" } ]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
mypy = "*"
numpy = "^1.21.4"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]
ipython = "^7.29.0"
pytest = "^6.2.5"
pylint = "^2.11.1"

[tool.poetry.scripts]
# Use for cli
# relationality = 'relationality.__main__:run'

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
